<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextName"
            android:ems="10"
            android:inputType="textVisiblePassword|date"
            />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextDate"
            android:ems="10"
            android:inputType="textVisiblePassword"
            />


        <EditText
            android:id="@+id/editTextStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextTime"
            android:ems="10"
            android:inputType="numberDecimal"
            />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_toRightOf="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextDate"
            android:layout_toRightOf="@+id/editTextDate"
            android:layout_alignParentLeft="true"
            android:text="@string/date"
            />
        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTime"
            android:layout_toRightOf="@+id/editTextTime"
            android:layout_alignParentLeft="true"
            android:text="@string/time"
            />

        <TextView
            android:id="@+id/textViewStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextStrength"
            android:layout_toRightOf="@+id/editTextStrength"
            android:layout_alignParentLeft="true"
            android:text="@string/strength"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"

            android:text="@string/save"
            /><!--android:onClick="run"-->

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:visibility="gone">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/delete"
                />

            <Button
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/edit"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>